nifi/nifi-registry/components/ldap/statefulset-env.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi-registry
spec:
  template:
    spec:
      containers:
        - name: nifi-registry
