nifi/nifi-registry/components/ldap/statefulset-keystore.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi-registry
spec:
  template:
    spec:
      containers:
        - name: nifi-registry
          ports:
            - name: https
              containerPort: 18443
          startupProbe:
            httpGet:
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          livenessProbe:
            httpGet:
              port: https
              scheme: HTTPS
          volumeMounts:
            - name: keystore
              mountPath: /opt/certs              
      volumes:
        - name: serving-cert
          secret:
            secretName: nifi-registry-serving-cert
        - name: keystore
          emptyDir: {}
