nifi/nifi-registry/components/ldap/route-tls.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nifi-registry
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: None
